// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "default": Object {
    "images": Array [
      Object {
        "height": 100,
        "path": "foobar/82e6d197b5ce433a-100.jpg",
        "width": 100,
      },
    ],
    "src": "foobar/82e6d197b5ce433a-100.jpg",
    "srcSet": "foobar/82e6d197b5ce433a-100.jpg",
    "toString": [Function],
  },
}
`;

exports[`doesn't emit file 1`] = `
Object {
  "default": Object {
    "height": 225,
    "images": Array [
      Object {
        "height": 225,
        "path": "foobar/445db0be601e84d6-250.jpg",
        "width": 250,
      },
    ],
    "src": "foobar/445db0be601e84d6-250.jpg",
    "srcSet": "foobar/445db0be601e84d6-250.jpg 250w",
    "toString": [Function],
    "width": 250,
  },
}
`;

exports[`multiple sizes 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 900,
        "path": "foobar/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/076d6ca8665b1d94-1000.jpg",
    "srcSet": "foobar/c869fe04ebafd01d-500.jpg 500w,foobar/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
    ],
    "src": "foobar/c869fe04ebafd01d-500.jpg",
    "srcSet": "foobar/c869fe04ebafd01d-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/img/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/img/76a7b8dd076af418-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/img/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/img/076d6ca8665b1d94-1000.jpg",
    "srcSet": "foobar/img/c869fe04ebafd01d-500.jpg 500w,foobar/img/76a7b8dd076af418-750.jpg 750w,foobar/img/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/test/c869fe04ebafd01d-500x450.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/test/76a7b8dd076af418-750x675.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/test/076d6ca8665b1d94-1000x900.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/test/076d6ca8665b1d94-1000x900.jpg",
    "srcSet": "foobar/test/c869fe04ebafd01d-500x450.jpg 500w,foobar/test/76a7b8dd076af418-750x675.jpg 750w,foobar/test/076d6ca8665b1d94-1000x900.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`override min and max with size 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/f7443232972a8934-100.jpg",
        "width": 100,
      },
    ],
    "src": "foobar/f7443232972a8934-100.jpg",
    "srcSet": "foobar/f7443232972a8934-100.jpg 100w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "default": Object {
    "height": 180,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/f7443232972a8934-100.jpg",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/974831fb3cc31ef7-200.jpg",
        "width": 200,
      },
    ],
    "src": "foobar/974831fb3cc31ef7-200.jpg",
    "srcSet": "foobar/f7443232972a8934-100.jpg 100w,foobar/974831fb3cc31ef7-200.jpg 200w",
    "toString": [Function],
    "width": 200,
  },
}
`;

exports[`parses json notation 1`] = `
Object {
  "default": Object {
    "height": 180,
    "images": Array [
      Object {
        "height": 45,
        "path": "foobar/843b57924a32e9ff-50.jpg",
        "width": 50,
      },
      Object {
        "height": 90,
        "path": "foobar/f7443232972a8934-100.jpg",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/974831fb3cc31ef7-200.jpg",
        "width": 200,
      },
    ],
    "src": "foobar/974831fb3cc31ef7-200.jpg",
    "srcSet": "foobar/843b57924a32e9ff-50.jpg 50w,foobar/f7443232972a8934-100.jpg 100w,foobar/974831fb3cc31ef7-200.jpg 200w",
    "toString": [Function],
    "width": 200,
  },
}
`;

exports[`png 1`] = `
Object {
  "default": Object {
    "height": 595,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/f64253666cd2fe13-500.png",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/a44dff6b028c41f7-513.png",
        "width": 513,
      },
    ],
    "src": "foobar/a44dff6b028c41f7-513.png",
    "srcSet": "foobar/f64253666cd2fe13-500.png 500w,foobar/a44dff6b028c41f7-513.png 513w",
    "toString": [Function],
    "width": 513,
  },
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "default": Object {
    "height": 595,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/940321b5b2ba9532-500.jpg",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/07deb4eb4e131586-513.jpg",
        "width": 513,
      },
    ],
    "src": "foobar/07deb4eb4e131586-513.jpg",
    "srcSet": "foobar/940321b5b2ba9532-500.jpg 500w,foobar/07deb4eb4e131586-513.jpg 513w",
    "toString": [Function],
    "width": 513,
  },
}
`;

exports[`png to jpeg with background color 2`] = `
Object {
  "default": Object {
    "height": 595,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/940321b5b2ba9532-500.jpg",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/07deb4eb4e131586-513.jpg",
        "width": 513,
      },
    ],
    "src": "foobar/07deb4eb4e131586-513.jpg",
    "srcSet": "foobar/940321b5b2ba9532-500.jpg 500w,foobar/07deb4eb4e131586-513.jpg 513w",
    "toString": [Function],
    "width": 513,
  },
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "public/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "public/76a7b8dd076af418-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "public/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "public/076d6ca8665b1d94-1000.jpg",
    "srcSet": "public/c869fe04ebafd01d-500.jpg 500w,public/76a7b8dd076af418-750.jpg 750w,public/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`public path should replace global publicPath absolute 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "/public/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "/public/76a7b8dd076af418-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "/public/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "/public/076d6ca8665b1d94-1000.jpg",
    "srcSet": "/public/c869fe04ebafd01d-500.jpg 500w,/public/76a7b8dd076af418-750.jpg 750w,/public/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`single size 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
    ],
    "src": "foobar/c869fe04ebafd01d-500.jpg",
    "srcSet": "foobar/c869fe04ebafd01d-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/76a7b8dd076af418-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/076d6ca8665b1d94-1000.jpg",
    "srcSet": "foobar/c869fe04ebafd01d-500.jpg 500w,foobar/76a7b8dd076af418-750.jpg 750w,foobar/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "default": Object {
    "height": 270,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/f7443232972a8934-100.jpg",
        "width": 100,
      },
      Object {
        "height": 150,
        "path": "foobar/fb90951ca5da54c2-167.jpg",
        "width": 167,
      },
      Object {
        "height": 211,
        "path": "foobar/fe6debad717249e9-234.jpg",
        "width": 234,
      },
      Object {
        "height": 270,
        "path": "foobar/a990e2f8f763852a-300.jpg",
        "width": 300,
      },
    ],
    "src": "foobar/a990e2f8f763852a-300.jpg",
    "srcSet": "foobar/f7443232972a8934-100.jpg 100w,foobar/fb90951ca5da54c2-167.jpg 167w,foobar/fe6debad717249e9-234.jpg 234w,foobar/a990e2f8f763852a-300.jpg 300w",
    "toString": [Function],
    "width": 300,
  },
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/76a7b8dd076af418-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/076d6ca8665b1d94-1000.jpg",
    "srcSet": "foobar/c869fe04ebafd01d-500.jpg 500w,foobar/76a7b8dd076af418-750.jpg 750w,foobar/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`with placeholder image 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/76a7b8dd076af418-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx4BBQUFBwYHDggIDh4UERQeHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHv/AABEIACQAKAMBEQACEQEDEQH/xAGiAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgsQAAIBAwMCBAMFBQQEAAABfQECAwAEEQUSITFBBhNRYQcicRQygZGhCCNCscEVUtHwJDNicoIJChYXGBkaJSYnKCkqNDU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6g4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2drh4uPk5ebn6Onq8fLz9PX29/j5+gEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoLEQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/AMnW/wBnaO4v4hpWo2tjZFv3reWxkRfRVzhvqSMe9bukuhnzO1mUm/ZomXVIZF8Uxy2YbMiyWZD47AYYg/pU+yGpF3XP2aNIuYi+na7cWlwe5hDRn/gORj86p0kHMzl7j9nPxZo9za32karY6lJGcyxMDCf+A5JB49cVlUoOUWjajW9nNS7HfeDPg9ObqK+8VyQsiHcLKE5DEf327j2HX1rCjgrO8zvxGZuS5aa+Z7dPNBa20tzcyRwwRKXkkfhVUDJJ9K9A8g8i8TftB+D9MuXg0u1utXZODKn7mIn2LfMf++cVm6iQ1FkvgT48eG/EWsRaXe2E+kTXB2xSPKJIi3oTgEZ9cYoVVdQcWeqQ3thcY+z3dtNuO0bJFbJ9OD1rS6ESFAeOfoaAPFPFvw98dalod43iv4hNNYW8DyPHH+7jbaCfnwACOOpzWMozfUtOK6HzWbIu/wC7IlQAH5PmyOnPpWG6L2Z33w1+Geta217cBlsJ9PmEWy5Uq27GfTjginKN0JSsz1v4S/DS78N+NINakuIfJSNmuQX3GSYhh8vA4AYHPrmqpwfMmwlJWPbAVfkZA7iuoyM+70+0u7SW2u4FninUpJDJ8yOD1BB4NTuB5/rHwltZ/F9j4h0pbKxNsQJIBbDy3VfukKMYYcfp6VDp63Q0+5sa5pOssrxxqmbniS4jjw+4Dgkg5HAxntUzTYIs/C7Tdfg8O+X4ilea4S5kEczABpI88EgdO/4VVNO2o5W6HXeQVyQcitCSVVGc5NMBr5DcE1LASJiwYtzzTQErcKBng0wAdM9z1oA//9k=",
    "src": "foobar/076d6ca8665b1d94-1000.jpg",
    "srcSet": "foobar/c869fe04ebafd01d-500.jpg 500w,foobar/76a7b8dd076af418-750.jpg 750w,foobar/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "default": Object {
    "height": 900,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/c869fe04ebafd01d-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/76a7b8dd076af418-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/076d6ca8665b1d94-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/076d6ca8665b1d94-1000.jpg",
    "srcSet": "foobar/c869fe04ebafd01d-500.jpg 500w,foobar/76a7b8dd076af418-750.jpg 750w,foobar/076d6ca8665b1d94-1000.jpg 1000w",
    "toString": [Function],
    "width": 1000,
  },
}
`;
